added optimization back

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ project(easydepthcalibration)
 
 find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs std_msgs cv_bridge image_transport)
 
-#SET(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_CXX_FLAGS "-O3")
+SET(CMAKE_BUILD_TYPE Release)
+SET(CMAKE_CXX_FLAGS "-O3")
+SET(CMAKE_C_FLAGS "-O3")
 
 FIND_PACKAGE(OpenCV REQUIRED)
 find_package(PCL)
