Trying the nodelet implementation of driver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(easydepthcalibration)
 
-find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs std_msgs cv_bridge image_transport)
+find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs std_msgs cv_bridge image_transport nodelet)
 
 SET(CMAKE_BUILD_TYPE Release)
-SET(CMAKE_CXX_FLAGS "-O3")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11")
 SET(CMAKE_C_FLAGS "-O3")
 
 FIND_PACKAGE(OpenCV REQUIRED)
@@ -34,9 +34,16 @@ add_library(calibration SHARED    src/calibration/calibration.h src/calibration/
 target_link_libraries(calibration ${PCL_LIBRARIES} ${OpenCV_LIBS})
 
 
-#REAL TIME DRIVER
-add_executable(driver_node src/driver/main.cpp)
+#REAL TIME DRIVER NODE
+add_executable(driver_node src/driver/main_driver_node.cpp src/driver/driver.cpp src/driver/driver.h)
 target_link_libraries(driver_node                   calibration
+                                                    ${PCL_LIBRARIES}
+                                                    ${OpenCV_LIBS}
+                                                    ${catkin_LIBRARIES})
+
+#REAL TIME DRIVER NODELET
+add_library(DriverNodelet src/driver/driver.cpp src/driver/driver.h src/driver/driver_nodelet.cpp src/driver/driver_nodelet.h)
+target_link_libraries(DriverNodelet                 calibration
                                                     ${PCL_LIBRARIES}
                                                     ${OpenCV_LIBS}
                                                     ${catkin_LIBRARIES})
