--- a/package.xml
+++ b/package.xml
@@ -15,4 +15,11 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <build_depend>cv</build_depend>
+
+  <build_depend>nodelet</build_depend>
+  <run_depend>nodelet</run_depend>
+  <export>
+    <nodelet plugin="${prefix}/DriverNodelet.xml"/>
+  </export>
+
 </package>
