--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,7 @@
   <build_depend>nodelet</build_depend>
   <run_depend>nodelet</run_depend>
   <export>
-    <nodelet plugin="${prefix}/DriverNodelet.xml"/>
+    <nodelet plugin="${prefix}/nodelets.xml"/>
   </export>
 
 </package>
